# speedupdate-rs

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
bindings/c/: Cargo.toml
bindings/c/include/: update_system.h
bindings/c/src/: lib.rs
cli/repository/: Cargo.toml
cli/repository/src/: main.rs
cli/workspace/: Cargo.toml
cli/workspace/src/: main.rs
doc/: repository.md
doc/schema/repository/: $package.json  current.json  packages.json  versions.json
lib/: Cargo.toml
lib/src/: histogram.rs  io.rs  lib.rs  sync.rs
lib/src/codecs/: brotli.rs  lzma.rs  mod.rs  raw.rs  vcdiff.rs  zstd.rs
lib/src/handlers/: direct.rs  mod.rs  sliced.rs
lib/src/link/: file.rs  https.rs  mod.rs
lib/src/metadata/: dijkstra.rs  mod.rs  v1.rs
lib/src/repository/: mod.rs  packager.rs  progress.rs
lib/src/workspace/: apply.rs  check.rs  download.rs  mod.rs  progress.rs  updater.rs
src/: apply.rs  download.rs  lib.rs  packager.rs  progression.rs  updater.rs
src/operation/: mod.rs
src/repository/: https.rs  local.rs  mod.rs
src/storage/: dijkstra.rs  mod.rs  v1.rs
updater/: Cargo.toml
updater/src/: apply.rs  download.rs  lib.rs  packager.rs  progression.rs  updater.rs
updater/src/operation/: mod.rs
updater/src/repository/: https.rs  local.rs  mod.rs
updater/src/storage/: mod.rs  v1.rs
updater/src/workspace/: mod.rs
