[package]
name = "updater"
version = "0.1.0"
authors = ["Vincent Rouillé <vincent@speedy37.fr>"]

[dependencies]
brotli = "1.1"
bytes = "0.4"
futures = "0.1"
futures-cpupool = "0.1"
hyper = "0.11"
hyper-tls = "0.1"
log = "0.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
sha1 = "0.3"
tokio-core = "0.1"
vcdiff-rs = { git = "https://github.com/Speedy37/vcdiff.git" }
