[package]
name = "updater"
version = "0.1.0"
authors = ["Vincent Rouillé <vincent@speedy37.fr>"]
edition = "2018"

[dependencies]
base64 = "0.10"
brotli = "3.3"
bytes = "0.4"
futures = "0.1"
futures-cpupool = "0.1"
hyper = "0.12"
hyper-tls = "0.3"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha1 = "0.3"
vcdiff-rs = { git = "https://github.com/Speedy37/vcdiff.git" }
