[package]
name = "update_system_c"
version = "0.1.0"
authors = ["Vincent RouilleÌ <vincent@speedy37.fr>"]
edition = "2018"

[dependencies]
env_logger = "0.6"
futures = "0.1"
log = "0.4"
updater = { path = "../../updater" }
tokio = "0.1"

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = 3
lto = true
