[package]
name = "update_system_c"
version = "0.9.0"
authors = ["Vincent RouilleÌ <vincent@speedy37.fr>"]
edition = "2018"

[dependencies]
env_logger = "0.8"
futures = "0.3"
log = "0.4"
speedupdate = { path = "../../lib" }
tokio = "1.0"

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = 3
lto = true
