[package]
name = "speedupdate-repository-cli"
version = "0.9.0"
authors = ["Vincent Rouillé <vincent@speedy37.fr>"]
edition = "2018"
description = """
cli tool to manage repository (set current version, add version, ...)
"""

[dependencies]
byte-unit = { version = "4.0.9", default-features = false }
clap = "2.33"
console = "0.15.0"
env_logger = "0.8"
futures = "0.3"
indicatif = "0.16.2"
log = "0.4"
parking_lot = "0.11.1"
tokio = { version = "1.0", features = ["full"] }
speedupdate = { path = "../../lib" }
